unpackaged/main/default/objects/HI_Fulfillment__c/HI_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>HI Fulfillment</label>
    <nameField>
        <displayFormat>FUL-{0000}</displayFormat>
        <label>HI Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hi Fulfillments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>