unpackaged/main/default/objects/HI_Fulfillment__c/fields/Fulfillable_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillable_Id__c</fullName>
    <label>Fulfillable Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>