unpackaged/main/default/objects/HI_Fulfillment__c/fields/Fulfillable_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillable_Type__c</fullName>
    <label>Fulfillable Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>