unpackaged/main/default/objects/HI_Fulfillment__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>